# screenshot_tool

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json  urls.example.txt
benches/: benchmark.rs  screenshot_bench.rs
scripts/: run_benchmarks.sh
src/: browser_pool.rs  cli.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  screenshot_service.rs  tests.rs  utils.rs  worker.rs
