[package]
name = "screenshot-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screenshot-tool"
path = "src/main.rs"

[dependencies]
# Browser automation
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide.git" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for URL validation
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Image processing
image = "0.24"

# Performance monitoring
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

# Additional utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
num_cpus = "1.16"
dashmap = "5.5"

[features]
integration_benchmarks = []

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.11"

[[bench]]
name = "benchmark"
harness = false

